# website

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/pages/: landing_page.rs  mod.rs  not_found.rs
src/signup/: controller.rs  mod.rs  model.rs
src/users/views/: mod.rs
src/util/: responses.rs
static/landing-page/: 404.html  index.css  index.html  main.js  package-lock.json  package.json
static/landing-page/logos/: indiedevcasts_github.xcf
templates/: index.html  layout.html
