[package]
name = "indiedevcasts-website"
version = "0.1.0"
authors = ["Julian Didier (theredfish) <did.julian@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
env_logger = "0.5"
serde_derive = "1.0.71"
serde = "1.0.71"
serde_qs = "0.4.1"
validator = "0.7.1"
validator_derive = "0.7.1"
futures = "0.1.24"
percent-encoding = "1.0.1"
askama = "0.7.0"

[build-dependencies]
askama = "0.7"
